# rsfetch

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: cli.rs  config.rs  field.rs  lib.rs  main.rs  render.rs  theme.rs
src/format/: bytes.rs  mod.rs  units.rs
src/info/: mod.rs
src/logo/: art.rs  mod.rs
tests/: cli.rs
