[package]
name = "rsfetch"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.33.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
owo-colors = "4"
supports-color = "3"
display-info = "0.5.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
